--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </h1>
         <ul>
           <li>
-            <a href="#home">Home</a>
+            <a id="home" href="#home">Home</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a id="section1" href="#about">About</a>
           </li>
           <li>
-            <a href="#cases">Cases</a>
+            <a id="section2" href="#cases">Cases</a>
           </li>
           <li>
             <a href="#blog">Blog</a>
@@ -43,9 +43,51 @@
         <a href="#about" class="btn"
           ><i class="fas fa-chevron-right"></i> Read More ...</a
         >
+        <button class="btn" id="btn1">Button1</button>
+        <button class="btn" id="btn2">Button2</button>
+        <button class="btn" id="btn3">Button3</button>
       </div>
     </header>
     <section class="cases">
+      <h1>PRVA SEKCIJA</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
+        temporibus, atque doloribus voluptatum vel pariatur veritatis beatae
+        quibusdam ipsam suscipit eos, maiores quidem, magnam explicabo!
+        Repudiandae ex repellendus veritatis dolore. Sunt ut assumenda adipisci
+        labore vel modi nihil officiis eos sit? Suscipit excepturi fugiat
+        placeat doloribus tenetur quasi magnam. Ipsa velit impedit corrupti
+        pariatur cumque ullam neque at sunt dolore! Suscipit nam sequi hic
+        quibusdam iusto, itaque aperiam? Expedita reprehenderit similique
+        repellendus exercitationem sint dignissimos voluptates! Tempore
+        voluptatum nobis quibusdam possimus temporibus dicta repellat. Soluta ut
+        nostrum minus magnam a. Praesentium debitis provident fuga
+        necessitatibus dolor quod nesciunt, nulla rerum sunt unde minima illum
+        pariatur aut assumenda dignissimos eum amet sint laudantium fugiat
+        repellendus! Quam cupiditate incidunt minus ab nulla? Velit quisquam,
+        consequuntur laborum iure nam, adipisci fugit assumenda aliquam iusto
+        nemo hic, sed quis dicta neque ut rerum. Commodi itaque, porro quaerat
+        magnam corporis eveniet consectetur reprehenderit id voluptatibus.
+        Delectus, doloremque nobis! Quasi dolore ad quisquam iste aliquam eius
+        ex ratione possimus quidem architecto repellendus cum nesciunt deleniti
+        earum, est quos nulla. Rem, eos sed repudiandae veniam doloremque
+        maiores? Ut ab quisquam in? Molestiae unde dolores, quas aut laudantium
+        ab ratione voluptatibus pariatur ipsam! Quos molestiae iusto, modi eius
+        quidem aliquid, optio sunt velit quam, praesentium delectus
+        voluptatibus! Natus! Laudantium, ullam cumque suscipit doloribus dicta
+        facere distinctio placeat quas quasi, neque accusamus fugiat iste maxime
+        vero, assumenda repellat nemo optio magnam perferendis voluptates ad
+        aliquid! Harum sed distinctio laudantium? Magnam sint quia illo magni,
+        quisquam obcaecati aut porro sequi minus laborum accusamus fugit amet.
+        Aspernatur esse, ratione, placeat vero ut delectus eius earum porro
+        deserunt quas perferendis laborum minus. Aliquam eos dolorum obcaecati
+        temporibus inventore animi voluptatem officia quis quae quasi? Soluta
+        modi architecto hic nostrum quasi recusandae quisquam ab eveniet
+        voluptatibus officiis aliquam dolores iste quam, voluptatum ex?
+      </p>
+    </section>
+    <section class="cases1">
+      <h1>DRUGA SEKCIJA</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
         temporibus, atque doloribus voluptatum vel pariatur veritatis beatae
@@ -83,27 +125,6 @@
       </p>
     </section>
 
-
-    <script>
-      const navbar = document.getElementById('navbar')
-      let scrolled = false
-
-      window.onscroll = function(){
-        if(window.pageYOffset > 100){
-          navbar.classList.remove('top')
-          if(!scrolled){
-            navbar.style.transform = 'translateY(-70px)'
-          }
-          setTimeout(function(){
-            navbar.style.transform = 'translateY(0)'
-            scrolled = true;
-          },500)
-        }else{
-          navbar.classList.add('top')
-          scrolled = false
-        }
-      }
-
-    </script>
+    <script src="js/main.js"></script>
   </body>
 </html>
